[#424] fixed test fails with java 11
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>